# trivima

./: .gitignore  CMakeLists.txt  Dockerfile  architecture.md  cell_architecture_theory.md  check_bounds.py  check_qwen_edit.py  complete_3d_world_theory (1).md  complete_3d_world_theory.md  convert_re10k.py  distillation_test (1).py  distillation_test.py  download_more_data.py  environment.yml  fix_registry.py  gaussians_to_mesh.py  gaussians_to_mesh_v2.py  generate_back_views.py  generate_back_views_v2.py  handler.py  pano_to_3dgs.py  pano_to_3dgs_v2.py  pipeline_complete.py  pipeline_gaussian.py  prepare_data.py  pyproject.toml  qwen_full_360.py  qwen_outpaint_pano.py  qwen_pano_fixed.py  render_3d_room.py  render_complete_room.py  render_novel_views.py  render_photo.py  render_splats.py  run_qwen_outpaint.py  run_zero123.py  single_image_precision_theory (1).md  single_image_precision_theory.md  test_complete_pipeline.py  test_multiview_pipeline.py  (+20 more)
blender_addon/: __init__.py
data/test_images/01_living_room/: depth.npy
data/test_images/02_bedroom/: depth.npy  labels.npy  metadata.npz
data/test_images/03_kitchen/: depth.npy  labels.npy  metadata.npz
data/test_images/04_bathroom/: depth.npy  labels.npy  metadata.npz
data/test_images/05_office/: depth.npy  labels.npy  metadata.npz
data/test_images/06_wide_angle/: depth.npy  labels.npy  metadata.npz
data/test_images/07_cluttered/: depth.npy  labels.npy  metadata.npz
data/test_images/08_hallway/: depth.npy  labels.npy  metadata.npz
data/test_images/09_glass_table/: depth.npy  labels.npy  metadata.npz
data/test_images/10_mirror_wall/: depth.npy  labels.npy  metadata.npz
scripts/: run_demo.py  runpod_start.sh  setup_models.sh
src/bindings/: CMakeLists.txt  bind_cell.cpp  bind_grid.cpp
src/core/: CMakeLists.txt
src/core/include/trivima/: cell.h  cell_grid.h  serialization.h  types.h
src/core/src/: buffer_renderer.cu  cell_grid.cpp  cell_grid_gpu.cu  gradients.cu  hierarchy.cu  point_to_cell.cu  serialization.cpp  shell_extension.cu
src/core/tests/: test_cell_sizes.cpp
tests/: conftest.py  generate_test_images.py  test_image_based.py  test_stage2.py  test_unified_foundation.py  test_vlm_stage4.py
tools/: add_depth_pro_to_torch.py  colmap_to_depth.py  kitti_to_torch.py  lidar_to_depth.py  megadepth_to_torch.py  pixelsplat_re10k_to_torch.py  replica_to_torch.py
trivima/: __init__.py  app.py
trivima/construction/: ai_volume_fill.py  point_to_grid.py  shell_extension.py  volume_fill.py
trivima/diffusion/: data_pipeline.py  dit_model.py
trivima/gaussian/: export.py  point_to_gaussians.py  renderer.py
trivima/multiview/: dataset.py  gs_lrm.py  model.py  pointcloud_dataset.py  train.py
trivima/navigation/: collision.py
trivima/perception/: depth_pro.py  depth_smoothing.py  failure_modes.py  pipeline.py  sam.py  scale_calibration.py
trivima/rendering/: lod.py
trivima/testing/: benchmark.py  visual_comparison.py
trivima/texturing/: buffer_renderer.py  cell_writeback.py  data_pipeline.py  gpu_buffer_renderer.py  inference_engine.py  temporal.py
trivima/validation/: conservation.py  functional_field.py  surface_field.py  validator.py
trivima/vlm/: aesthetic_ranker.py  auto_furnish.py  qwen_vlm.py  room_estimator.py
(+7 files in other folders)
